--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul> 
-             <div id="acessibilidade">
-  <button id="botao-acessibilidade" class="btn btn-primary fw-bold">acessibilidade</button> 
-  <div id="opcoes-acessibilidade">
-    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
-    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
-  </div>
-</div>
+            <div id="acessibilidade" class="menu-acessibilidade"> 
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+                        <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
+                        <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
+                        <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bibi-shadows"></i></button>
+                </div>
+        </div>
         </nav>
        
     </header>
@@ -52,7 +53,7 @@
 
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center">
+                <div class="col-4 d-flex justify-content-center" .fundo galeria
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
