--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">A música popular brasileira, conhecida como MPB, é um gênero musical. Tem relação com a produção nacional desenvolvida a partir de um movimento cultural surgido após o golpe militar de 1964.
+                        A maioria das músicas produzidas no período contestava a ditadura, trazendo questionamentos sobre a situação brasileira de forma poética.
+                        Já quando se fala da música brasileira com caráter popular, refere-se ao conjunto de manifestações culturais de influência indígena, africana e europeia no país
+                         Fonte: Site Toda a matéria</p>
                 </div>
             </div>
         </section>
