--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src=MPB.png class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -40,24 +40,26 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
+                    <img src="img/MPB.png" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
+                    <a href="#A música popular brasileira (MPB)"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em  dois microfones" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img Galileu_arruda.jpg Show de lançamento do CD O Dia da Virada, Teatro Renascença, Porto Alegre
+
+                Galileu Arruda - originally posted to Flickr as O Dia da Virada - show de lançamento title= Galileu arruda.jpg - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a Tropicália"></section>
+        <section id=" música popular brasileira" class="my-5 pt-6  música popular brasileira" tabindex="0" aria-label="Seção explicativa sobre  música popular brasileira"></section>
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center" .fundo galeria
-                    <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
+                    <img src="img/Design sem nome.png class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
+                    <h2>O que foi a  música popular brasileira</h2>
                     <p class="p-2">A música popular brasileira, conhecida como MPB, é um gênero musical. Tem relação com a produção nacional desenvolvida a partir de um movimento cultural surgido após o golpe militar de 1964.
                         A maioria das músicas produzidas no período contestava a ditadura, trazendo questionamentos sobre a situação brasileira de forma poética.
                         Já quando se fala da música brasileira com caráter popular, refere-se ao conjunto de manifestações culturais de influência indígena, africana e europeia no país
